# srsv

./: .gitignore  student.txt
lab1/: CMakeLists.txt  controller.c  input.c  main.c  readme.txt  simulator.c  time_utils.c
lab1/inc/: controller.h  input.h  simulator.h  time_utils.h
lab2/: CMakeLists.txt  controller.c  input.c  main.c  periodic_signal.c  readme.txt  scheduling.c  simulator.c  stats.c  time_utils.c
lab2/inc/: controller.h  input.h  periodic_signal.h  scheduling.h  simulator.h  stats.h  time_utils.h
lab3/: CMakeLists.txt  controller.c  main.c  simulator.c  stats.c  time_utils.c
lab3/inc/: call.h  controller.h  input.h  simulator.h  stats.h  time_utils.h
